Cached similars checked

--- a/templates/find_similars.html
+++ b/templates/find_similars.html
@@ -29,14 +29,13 @@ Find similars
 </div>
 <div class="cardcontainer v-flex wrapper">
     <div class="form-group">
-        <form action="" method="post" novalidate>
+        <form action="" method="post">
             {{form.hidden_tag()}}
-            {{ form.smiles.label(for='molsmiles')}}
-            {{ form.smiles(class="form-control", id="molsmiles", placeholder="You can also paste smiles here") }}
             {{ form.select.label }}
             {{ form.select(class="form-select") }}
+            {{ form.smiles.label(for='molsmiles')}}
+            {{ form.smiles(class="form-control", id="molsmiles", placeholder="You can also paste smiles here") }}
             {{ form.submit(class="btn btn-secondary") }}
-            <button class="btn btn-primary" onclick="get3Dsimilars()">Find 3D similars</button>
         </form>
     </div>
 </div>
