--- a/templates/show_similars.html
+++ b/templates/show_similars.html
@@ -9,7 +9,7 @@ Similars <a href="download_similars.csv?molid={{ mol_inchi_and_dbid }}"><button 
     
     
     <div class="wrapper">
-        <table id="resultsTable"></table>
+        <table class="table" id="resultsTable"></table>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
