--- a/templates/index.html
+++ b/templates/index.html
@@ -36,10 +36,10 @@ For SAR exploration, target prediction
 
 
     <div class="card card-1 mb-3" style="max-width: 18rem;">
-        <a href="explore_compound.html">
+        <a href="tools.html">
             <div class="card-body">
-                <h5 class="card-title">Explore a compound</h5>
-                <p class="card-text">Find commercial suppliers and explore predicted properties</p>
+                <h5 class="card-title">Tools</h5>
+                <p class="card-text">Links to useful cheminformatics tools.</p>
             </div>
         </a>
     </div>
