--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@ Easy molecular similarity
 {% endblock %}
 
 {% block herosubtitle %}
-For SAR exploration, target prediction
+For structural activity relationship exploration and target prediction
 {% endblock %}
 
 {% block content %}
