Added choice of num similars to keep
As per reviewer request, the user can now keep:
100, 200, 500, 1000, or 2000 similar molecules

--- a/templates/find_similars.html
+++ b/templates/find_similars.html
@@ -35,6 +35,8 @@ Find similars
             {{ form.smiles(class="form-control", id="molsmiles", placeholder="You can also paste smiles here") }}
             {{ form.select.label }}
             {{ form.select(class="form-select") }}
+            {{ form.select_n_to_keep.label }}
+            {{ form.select_n_to_keep(class="form-select") }}
             {{ form.submit(class="btn btn-secondary") }}
         </form>
     </div>
