--- a/templates/predict_targets.html
+++ b/templates/predict_targets.html
@@ -29,6 +29,8 @@ Predict targets
             {{form.hidden_tag()}}
             {{ form.smiles.label(for='molsmiles')}}
             {{ form.smiles(class="form-control", id="molsmiles", placeholder="You can also paste smiles here") }}
+            {{ form.select_n_to_keep.label }}
+            {{ form.select_n_to_keep(class="form-select") }}
             {{ form.submit(class="btn btn-secondary") }}
         </form>
     </div>
