Removed hardcoded references to 200 mols
Previous modifications to make the number of similars used in similarity
and target prediction left some hardcoded references to 200, which were
cleaned up from code and documentation.

--- a/templates/about.html
+++ b/templates/about.html
@@ -36,7 +36,7 @@ About
     low-energy conformers for each molecule. These low energy conformers are generated using the protocol outlined
     by Ebjner[4] (see repository for code listing). Conformers are used to pre-generate descriptors which are then
     scored against the user supplied query molecule after conformer and descriptor generation.
-    The top 200 results are returned.
+    The top N similars are returned to the user, where N is definable at job definition.
     </p>
     <p>
         The authors of SimilarityLab will always endevour to refresh the websites eMolecules version periodically.
