Clickable ChEMBL links added to target information

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -173,6 +173,16 @@ ul {
           align-items: center;
 }
 
+td a:link {
+  text-decoration: none;
+  color: inherit;
+}
+
+td a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
 .instructioncardcontainer {
   display: -webkit-box;
   display: -ms-flexbox;
