--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -153,6 +153,11 @@ ul {
     align-items:center;
 }
 
+td{
+    a:link{text-decoration: none;color: inherit;}
+    a:visited{text-decoration: none;color: inherit;}
+}
+
 .instructioncardcontainer{
     display: flex;
     flex: content;
