--- a/templates/tools.html
+++ b/templates/tools.html
@@ -12,10 +12,17 @@ Tools
 
 
     <p>
-    <h3>eMolecules</h3>
-    SimilarityLab uses the eMolecules database as a source of commercially available small molecules. <a
-        href="https://www.emolecules.com/"><br>Visit eMolecules</a>
-    </p>
+        <h3>MRlogP</h3>
+        Predict logPs for small druglike molecules <a
+            href="https://similaritylab.bio.ed.ac.uk/mrlogp"><br>Visit MRlogP</a>
+        </p>
+        <br>
+    
+        <p>
+        <h3>eMolecules</h3>
+        SimilarityLab uses the eMolecules database as a source of commercially available small molecules. <a
+            href="https://www.emolecules.com/"><br>Visit eMolecules</a>
+        </p>
     <br>
 
     <p>
